add rating, image for step and recipe, and tests
