# internal/delivery/http/models/cooking_step.go
@@ -1,10 +1,11 @@
 package models
 
 type CreateStepRequest struct {
-	RecipeId    string  `json:"recipe_id"`
-	OrderNumber int     `json:"order_number"`
-	Description string  `json:"description"`
+	RecipeId    string  `json:"recipe_id" validate:"required"`
+	OrderNumber int     `json:"order_number" validate:"required"`
+	Description string  `json:"description" validate:"required"`
 	CookingTime float32 `json:"cooking_time"`
+	Image       string  `json:"image"`
 }
 
 type CreateStepResponse struct {
@@ -12,11 +13,12 @@ type CreateStepResponse struct {
 }
 
 type UpdateStepRequest struct {
-	Guid        string  `json:"guid"`
-	RecipeId    string  `json:"recipe_id"`
+	Guid        string  `json:"guid" validate:"required"`
+	RecipeId    string  `json:"recipe_id" validate:"required"`
 	OrderNumber int     `json:"order_number"`
 	Description string  `json:"description"`
 	CookingTime float32 `json:"cooking_time"`
+	Image       string  `json:"image"`
 }
 
 type UpdateStepResponse struct {
