# internal/delivery/http/models/user.go
@@ -1,9 +1,9 @@
 package models
 
 type RegistrationRequest struct {
-	Username      string `json:"username"`
-	Password      string `json:"password"`
-	RetryPassword string `json:"retry_password"`
+	Username      string `json:"username" validate:"required"`
+	Password      string `json:"password" validate:"required"`
+	RetryPassword string `json:"retry_password" validate:"required"`
 }
 
 type RegistrationResponse struct {
@@ -11,8 +11,8 @@ type RegistrationResponse struct {
 }
 
 type LoginRequest struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
 }
 
 type LoginResponse struct {
